--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -1,4 +1,7 @@
-<p>Home component works!</p>
+<mat-toolbar>
+  <span class="title" routerLink="/">Virtual Maths Camp</span>
+  <!-- <app-language-switcher style="margin-right: 1em"></app-language-switcher> -->
+</mat-toolbar>
 
 <p>{{ cards.length }} cards</p>
 @for(card of cards; track card.id){
