refactor: wip lang and data select

--- a/src/app/app.html
+++ b/src/app/app.html
@@ -1,1 +1,5 @@
+<mat-toolbar>
+  <h1>Virtual Maths Camp</h1>
+  <!-- <app-language-switcher style="margin-right: 1em"></app-language-switcher> -->
+</mat-toolbar>
 <router-outlet></router-outlet>
