--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -1,5 +1,5 @@
 <mat-toolbar>
-  <span class="title" routerLink="/">Virtual Maths Camp</span>
+  <h1>Virtual Maths Camp</h1>
   <!-- <app-language-switcher style="margin-right: 1em"></app-language-switcher> -->
 </mat-toolbar>
 
