--- a/src/styles.scss
+++ b/src/styles.scss
@@ -33,8 +33,14 @@ html {
 html,
 body {
   height: 100%;
+  /* styles.css */
+  margin: 0;
 }
+
 body {
   margin: 0;
   font-family: "Open Sans", "Helvetica Neue", sans-serif;
+  display: flex;
+  flex-direction: column;
+  min-height: 100vh;
 }
