chore: code tidying

--- a/src/app/app.html
+++ b/src/app/app.html
@@ -2,7 +2,7 @@
   <h1>Virtual Maths Camp</h1>
   <!-- <app-language-switcher style="margin-right: 1em"></app-language-switcher> -->
 </mat-toolbar>
-<section style="flex: 1">
+<section class="main-content">
   <router-outlet></router-outlet>
 </section>
 
