--- a/src/app/app.scss
+++ b/src/app/app.scss
@@ -2,6 +2,16 @@
   display: contents;
 }
 
+.main-content {
+  max-width: 1080px;
+  flex: 1;
+  margin: auto;
+  width: 100%;
+  // Generated from https://heropatterns.com/ (diagonal line)
+  background-color: #dfdbe5;
+  background-image: url("data:image/svg+xml,%3Csvg width='6' height='6' viewBox='0 0 6 6' xmlns='http://www.w3.org/2000/svg'%3E%3Cg fill='%239C92AC' fill-opacity='0.3' fill-rule='evenodd'%3E%3Cpath d='M5 0h1L0 6V5zM6 5v1H5z'/%3E%3C/g%3E%3C/svg%3E");
+}
+
 mat-toolbar {
   min-height: 64px;
 }
