--- a/src/app/pages/home/home.page.scss
+++ b/src/app/pages/home/home.page.scss
@@ -7,10 +7,7 @@
   flex-wrap: wrap;
   gap: 16px;
   justify-content: center;
-  max-width: 1080px;
-  // Generated from https://heropatterns.com/ (diagonal line)
-  background-color: #dfdbe5;
-  background-image: url("data:image/svg+xml,%3Csvg width='6' height='6' viewBox='0 0 6 6' xmlns='http://www.w3.org/2000/svg'%3E%3Cg fill='%239C92AC' fill-opacity='0.3' fill-rule='evenodd'%3E%3Cpath d='M5 0h1L0 6V5zM6 5v1H5z'/%3E%3C/g%3E%3C/svg%3E");
+  margin-bottom: 3rem;
 }
 
 .card-heading {
