feat: dynamic data updates

--- a/src/app/pages/home/home.page.html
+++ b/src/app/pages/home/home.page.html
@@ -1,5 +1,5 @@
 <div class="cards-container">
-  @for(card of cards; track card.slug){
+  @if(cards(); as cards){ @for(card of cards; track card.slug){
   <div>
     <h3 class="card-heading">{{ card.title }}</h3>
     <app-playing-card
@@ -8,5 +8,5 @@
       [attr.view-transition-name]="'card-' + card.slug"
     ></app-playing-card>
   </div>
-  }
+  } }
 </div>
