--- a/src/app/pages/card-details/card-details.page.html
+++ b/src/app/pages/card-details/card-details.page.html
@@ -1,10 +1,14 @@
+@if(card(); as card){
+<!-- Not Found -->
 @if(card._not_found){
 <p>Not Found</p>
 <a href="/">Go To Home Page</a>
-} @else {
+}
+<!-- Card View -->
+@else {
 <app-playing-card
   [card]="card"
   [attr.view-transition-name]="'card-' + card.slug"
 ></app-playing-card>
-<div>title:{{ card.title }}</div>
-}
+<div>{{ card | json }}</div>
+} }
