--- a/src/app/app.scss
+++ b/src/app/app.scss
@@ -9,6 +9,7 @@
 mat-toolbar {
   display: flex;
   align-items: center;
+  gap: 8px;
 }
 .main-content {
   max-width: 1080px;
@@ -20,4 +21,6 @@ mat-toolbar {
   cursor: pointer;
   margin-left: 1rem;
   flex: 1;
+  overflow: hidden;
+  text-overflow: ellipsis;
 }
