--- a/src/app/components/playing-card/playing-card.component.scss
+++ b/src/app/components/playing-card/playing-card.component.scss
@@ -2,10 +2,13 @@
   display: block;
 }
 
+$cardHeight: 420px;
+$cardWidth: calc($cardHeight/3 * 2);
+
 .playing-card {
   cursor: pointer;
-  width: 240px;
-  height: 360px;
+  width: $cardWidth;
+  height: $cardHeight;
   background: white;
   border: 2px solid #ccc;
   border-radius: 12px;
@@ -14,11 +17,35 @@
   font-family: "Segoe UI", "Arial", sans-serif;
   color: #222;
   overflow: hidden;
+  display: flex;
+  flex-direction: column;
+}
+.card-statement-container {
+  flex: 1;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  margin-top: 64px;
+  margin-bottom: 64px;
+  margin-left: 8px;
+  margin-right: 8px;
+  max-height: calc(100% - 128px);
 }
 
-.rank,
-.suit {
-  font-size: 24px;
+.card-statement {
+  overflow: auto;
+  // display dynamic images centered
+  img {
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    max-height: 100px;
+    max-width: calc($cardWidth - 16px);
+  }
+  // remove margin from first p element
+  p:first-of-type {
+    margin-top: 0;
+  }
 }
 
 .playing-card[data-suit="heart"],
@@ -42,33 +69,29 @@
   content: "♣";
 }
 
-.corner {
-  position: absolute;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  font-size: 1.1em;
-  font-weight: bold;
-  line-height: 1;
-}
+.playing-card {
+  .rank,
+  .suit {
+    font-size: 24px;
+  }
+  .corner {
+    position: absolute;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    font-size: 1.1em;
+    font-weight: bold;
+    line-height: 1;
+  }
 
-.top-left {
-  top: 8px;
-  left: 10px;
-}
+  .top-left {
+    top: 8px;
+    left: 10px;
+  }
 
-.bottom-right {
-  bottom: 8px;
-  right: 10px;
-  transform: rotate(180deg);
-}
-
-.center-symbol {
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
-  font-size: 3em;
-  opacity: 0.15;
-  pointer-events: none;
+  .bottom-right {
+    bottom: 8px;
+    right: 10px;
+    transform: rotate(180deg);
+  }
 }
