--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,5 +1,4 @@
-@use "./theme/colors" as colors;
-@import "./theme/typography";
+@use "./theme/typography";
 
 @tailwind base;
 @tailwind components;
@@ -8,13 +7,10 @@
 html,
 body {
   height: 100%;
-  /* styles.css */
   margin: 0;
 }
 
 body {
-  margin: 0;
-  font-family: "Open Sans", "Helvetica Neue", sans-serif;
   display: flex;
   flex-direction: column;
   min-height: 100vh;
