--- a/src/theme/_typography.scss
+++ b/src/theme/_typography.scss
@@ -6,7 +6,7 @@ html {
     @apply text-xl;
   }
 
-  font-family: "Open Sans", sans-serif;
+  font-family: "Noto Sans", sans-serif;
   font-optical-sizing: auto;
   font-weight: 400;
   font-style: normal;
