--- a/src/styles.scss
+++ b/src/styles.scss
@@ -27,11 +27,12 @@ body {
     // from playing-card component calc($cardWidth - 16px);
     max-width: 224px;
   }
-  // remove margin from first p element
-  p:first-of-type {
+  // remove margin general p element
+  p {
     margin-top: 0;
   }
-  p {
+  // add margins between p siblings
+  p + p {
     margin-top: 1rem;
   }
   a {
