feat: app string translation system

--- a/src/app/components/card-info/card-info.component.html
+++ b/src/app/components/card-info/card-info.component.html
@@ -10,7 +10,7 @@
     <div
       class="flex-1 text-center overflow-hidden overflow-ellipsis sm:text-left"
     >
-      {{ tab.heading }}
+      {{ (tab.heading | translate)() }}
     </div>
   </button>
   }
