--- a/src/app/pages/home/home.page.scss
+++ b/src/app/pages/home/home.page.scss
@@ -11,7 +11,8 @@
   text-align: center;
   overflow: hidden;
   text-overflow: ellipsis;
-  max-width: 240px;
+  max-width: 370px;
+  margin-bottom: 8px;
 }
 
 app-playing-card {
